<resources>
    <string name="app_name">BillSplitter</string>
    <string name="amount">Total Amount</string>
    <string name="noOfPeople">Number of People</string>
    <string name="tax">Tax and Service Charge</string>
    <string name="taxHint">GST (%)</string>
    <string name="per_person">Per Person</string>
    <string name="service_charge">Service Charge</string>
    <string name="resultTax">Tax and Service Charge</string>
    <string name="total">Total</string>
    <string name="submit">submit</string>
    <string name="reset">reset</string>
    <string name="gst">GST</string>
    <string name="_7">7</string>
</resources>
