<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity"
    >

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="420dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/reset"
        android:textColor="@color/colorSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="420dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/submit"
        android:textColor="@color/colorSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="206dp"
        tools:layout_editor_absoluteY="37dp">

        <TextView
            android:id="@+id/TextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="26dp"
            android:text="@string/amount"
            android:textColor="@color/colorSecondary" />

        <EditText
            android:id="@+id/amountTextField"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="68px"
            android:backgroundTint="@color/colorSecondary"
            android:ems="10"
            android:inputType="number"
            android:textColor="@color/colorSecondary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/TextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="10dp"
            android:text="@string/noOfPeople"
            android:textColor="@color/colorSecondary" />

        <LinearLayout
            android:layout_width="221dp"
            android:layout_height="43dp"
            android:layout_marginLeft="68px"
            android:orientation="horizontal">

            <Button
                android:id="@+id/minusBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/colorAccent"
                android:includeFontPadding="false"
                android:paddingTop="3dp"
                android:text="-"
                android:textColor="@color/colorSecondary"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/noOfPplTextField"
                android:layout_width="66dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20px"
                android:layout_marginRight="20px"
                android:backgroundTint="@color/colorSecondary"
                android:editable="false"
                android:ems="10"
                android:inputType="number"
                android:text="1"
                android:textAlignment="center"
                android:textColor="@color/colorSecondary"
                android:textSize="16sp" />

            <Button
                android:id="@+id/plusBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/colorAccent"
                android:includeFontPadding="false"
                android:paddingTop="3dp"
                android:text="+"
                android:textColor="@color/colorSecondary"
                android:textSize="30sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/TextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="10dp"
            android:text="@string/tax"
            android:textColor="@color/colorSecondary" />

        <EditText
            android:id="@+id/taxTextField"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="68px"
            android:backgroundTint="@color/colorSecondary"
            android:ems="10"
            android:hint="@string/taxHint"
            android:inputType="number"
            android:text="@string/_7"
            android:textColor="@color/colorSecondary"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/gstSwitch"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="2dp"
            android:text="@string/gst"
            android:textColor="@color/colorSecondary"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/scSwitch"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:paddingLeft="2dp"
            android:text="@string/service_charge"
            android:textColor="@color/colorSecondary"
            android:textSize="15sp" />

        <TableLayout
            android:id="@+id/resultTable"
            android:layout_width="441dp"
            android:layout_height="113dp"
            android:layout_marginTop="20dp"
            android:visibility="invisible">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:layout_marginTop="5dp">

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/tax" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/resultTax"
                    android:textColor="@color/colorSecondary" />

                <TextView
                    android:id="@+id/taxTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/colorSecondary" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="5dp">

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/total" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/total"
                    android:textColor="@color/colorSecondary" />

                <TextView
                    android:id="@+id/totalTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/colorSecondary" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="89dp"
                android:layout_marginTop="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/person" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/per_person"
                    android:textColor="@color/colorSecondary" />

                <TextView
                    android:id="@+id/perPersonTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/colorSecondary" />
            </TableRow>

        </TableLayout>

    </LinearLayout>

<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--        android:id="@+id/historyBtn"-->
<!--        android:layout_width="80dp"-->
<!--        android:layout_height="80dp"-->
<!--        android:layout_marginEnd="26dp"-->
<!--        android:layout_marginBottom="26dp"-->
<!--        app:fabCustomSize="80dp"-->
<!--        android:tint="@android:color/white"-->
<!--        android:clickable="true"-->
<!--        android:gravity="center"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:srcCompat="@drawable/ic_history_24px" />-->

</androidx.constraintlayout.widget.ConstraintLayout>